hphp/hack/test/typecheck/xhp/required_attr/spread.php.exp
File "spread.php", line 22, characters 8-20:
Required attribute :a is missing. (Typing[4314])
File "spread.php", line 6, characters 7-8:
The attribute :a is declared in this class.
File "spread.php", line 22, characters 8-20:
Required attribute :b is missing. (Typing[4314])
File "spread.php", line 6, characters 7-8:
The attribute :b is declared in this class.
File "spread.php", line 29, characters 8-20:
Required attribute :b is missing. (Typing[4314])
File "spread.php", line 5, characters 7-8:
The attribute :b is declared in this class.
File "spread.php", line 36, characters 8-20:
Required attribute :a is missing. (Typing[4314])
File "spread.php", line 3, characters 7-8:
The attribute :a is declared in this class.
